# pdna

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  runs_v5_final.json  runs_v5_partial.json
configs/: default.yaml
docs/: benchmark_ablation_plan.md  hypothesis_and_benefits.md  pulse_poc_plan.md  task_plan.md  v1_all_results.json  v1_experiment_results.txt  v2_experiment_log.txt  v3_final_experiment_log.txt  v3_proper_experiment_log.txt  v3b_proper_experiment_log.txt  v4_fast_ablation_log.txt
paper/: main.tex  references.bib  tables_generated.tex
reports/: analysis_data.json  technical_report.md
runs/: all_results.json
scripts/: analyze_revision.py  download_and_report.sh  generate_paper_figures.py  generate_report.py  populate_paper.py  run_experiments.py  run_experiments_v2.py  run_extended_ablation.py  run_fast_ablation.py  run_final_experiments.py  run_gpu_experiments.py  run_proper_experiments.py  run_revision_experiments.py  train.py
src/pdna/: __init__.py
src/pdna/analysis/: __init__.py  results.py  visualize.py
src/pdna/data/: __init__.py  gapped.py  image.py  listops.py  pathfinder.py  retrieval.py  text.py
src/pdna/models/: __init__.py  baseline_ltc.py  noise_ltc.py  pulse_cfc.py  pulse_ltc.py  variants.py
src/pdna/training/: __init__.py  config.py  trainer.py
tests/: test_analysis.py  test_pulse_cfc.py  test_pulse_ltc.py
