[project]
name = "pdna"
version = "0.1.0"
description = "Pulse-Driven Neural Architecture — intrinsic oscillatory dynamics for continuous-time recurrent models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "ncps>=0.0.7",
    "torchdiffeq>=0.2.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "wandb>=0.15",
    "tensorboard>=2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdna"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
